# mbr

./: Cargo.toml  README.md
.github/workflows/: Releases.yml  linux.yml  windows.yml
src/: main.rs
src/commands/: get.rs  list.rs  mod.rs  set.rs
src/monitor/: get.rs  list.rs  mod.rs  monitor.rs  set.rs
